# tui_kit

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/skills/install-vfp-tuikit-skills/: SKILL.md
.agents/skills/vfp-tuikit/: SKILL.md
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/skills/tui-kit/: SKILL.md
docs/: README.md
docs/designs/: README.md  TEMPLATE.md  tui_kit.md  vfp_tuikit.md
src/: ansi_width.rs  lib.rs  metrics.rs  palette.rs  render_ctx.rs  theme.rs
src/cli/: action_line.rs  badge.rs  mod.rs  panel.rs  progress.rs  spacer.rs  summary.rs  table.rs
src/tui/picker/: filter.rs  mod.rs  render.rs  state.rs
